manifests/deamon.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd-daemon
  namespace: dotnetdemo  # Replace 'your_namespace' with the desired namespace
spec:
  selector:
    matchLabels:
      app: fluentd-daemon
  template:
    metadata:
      labels:
        app: fluentd-daemon
    spec:
      containers:
        - name: fluentd
          image: fluent/fluentd:v1.14-debian-1
          ports:
            - containerPort: 24224
              protocol: TCP
          volumeMounts:
            - name: varlog
              mountPath: /var/log
      terminationGracePeriodSeconds: 30
      volumes:
        - name: varlog
          hostPath:
            path: /var/log
