manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: dotnetdemo
  name: dotnetdemodeployment
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dotnet-app
    spec:
      containers:
        - name: dotnet-app
          image: enariya0410/myapp:v1.0
          resources:
            requests:
              cpu:  100m
              memory: 300Mi
            limits:
              cpu: 200m
              memory: 300Mi
          livenessProbe:
            exec:
              command:
              - ls
            initialDelaySeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
              - ls
            initialDelaySeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          ports:
            - containerPort: 5000
      imagePullSecrets:
        - name: acr-secret
