manifests/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnetdemoservice
  namespace: sincehetoldmetoo
spec:
  selector:
    app: dotnet-app
  type: LoadBalancer
  sessionAffinity: None
  ports:
  - name: http-port
    protocol: TCP
    port: 80
    targetPort: 5000
